criação da listagem de instrutores

--- a/views/instructors/create.njk
+++ b/views/instructors/create.njk
@@ -42,7 +42,7 @@
         <div class="item">
             <div>Área de atuação</div>
             <div>
-               <input type="text" name="serveces" placeholder="Separe os serviços prestados por vírgula">
+               <input type="text" name="services" placeholder="Separe os serviços prestados por vírgula">
             </div>
         </div>
 
