--- a/public/styles.css
+++ b/public/styles.css
@@ -161,7 +161,8 @@ input::placeholder {
     font-weight: normal;
 }
 
-button[type="submit"] {
+button[type="submit"],
+a.button {
     padding: 8px 32px;
     background-color: var(--primary-color);
     color: white;
@@ -169,4 +170,11 @@ button[type="submit"] {
     margin-top: 32px;
     width: 100%;
     font-size: 16px;
+}
+
+a.button {
+    display: block;
+    box-sizing: border-box;
+    text-align: center;
+    text-decoration: none;
 }
