--- a/views/instructors/edit.njk
+++ b/views/instructors/edit.njk
@@ -8,7 +8,7 @@
         
     </section>
     <section class="details">
-        <h3>Novo Instrutor</h3>
+        <h3>Editar Instrutor</h3>
 
         {% include './fields.njk' %}
 
