--- a/views/instructors/show.njk
+++ b/views/instructors/show.njk
@@ -39,6 +39,8 @@
             <div>{{ instructor.created_at }}</div>
         </div>
 
+        <a href="#" class="button">Editar</a>
+
     </section>
 </div>
 
