criação das end-points do Member

--- a/public/styles.css
+++ b/public/styles.css
@@ -143,7 +143,7 @@ header {
 
 /* FORM*/
 
-input {
+input, select {
     width: 100%;
     outline: none;
     color: #555;
@@ -231,7 +231,8 @@ tbody tr td:first-child span {
     border: 2px solid white;
 }
 
-tbody tr td:last-child a {
+tbody tr td:last-child a,
+.table-container > a {
     background-color: var(--primary-color);
     padding: 8px 16px;
     text-decoration: none;
@@ -239,6 +240,11 @@ tbody tr td:last-child a {
     color: white;
     font-size: 12px;
     border-radius: 4px;
+}
+
+.table-container > a {
+    margin-bottom: 16px;
+    display: inline-block;
 }
 
 .table-container thead tr th:last-child,
