--- a/views/instructors/edit.njk
+++ b/views/instructors/edit.njk
@@ -6,7 +6,7 @@
 
     <section 
         class="avatar" 
-        style="background: url(https://source.unsplash.com/collection/3465564/500x500) no-repeat center center / cover">
+        style="background: url({{ instructor.avatar_url }}) no-repeat center center / cover">
     </section>
 
     <section class="details">
@@ -28,5 +28,6 @@
     </section>
 </div>
 
+{% include '../confirmDelete.njk' %}
 
 {% endblock content %}
